# adventofcode

./: .clang-format  .gitignore  CMakeLists.txt  README.md  adventofcode.py  daygen.py
2015/day01/: CMakeLists.txt  day01.cpp
2015/day02/: CMakeLists.txt  day02.cpp
2015/day03/: CMakeLists.txt  day03.cpp
2015/day04/: CMakeLists.txt  day04.cpp
2015/day05/: CMakeLists.txt  day05.cpp
2015/day06/: day06.cpp  day06.h  main.cpp  test.cpp
2015/day07/: day07.cpp  day07.h  test.cpp
2016/day01/: CMakeLists.txt  day01.cpp
2016/day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp  test.cpp
2016/day03/: CMakeLists.txt  day03.cpp  test.cpp
2020/: aoc_learn.md
2020/day01/: CMakeLists.txt  day01.cpp  day01.h  main.cpp  test.cpp
2020/day02/: CMakeLists.txt  day02.cpp
2020/day03/: CMakeLists.txt  day03.cpp
2020/day04/: CMakeLists.txt  day04.cpp
2020/day05/: CMakeLists.txt  day05.cpp
2020/day06/: CMakeLists.txt  day06.cpp
2020/day07/: CMakeLists.txt  day07.cpp
2020/day08/: CMakeLists.txt  day08.cpp
2020/day09/: CMakeLists.txt  day09.cpp
2020/day10/: CMakeLists.txt  day10.cpp
2020/day11/: CMakeLists.txt  day11.cpp
2020/day12/: CMakeLists.txt  day12.cpp
2020/day13/: CMakeLists.txt  day13.cpp
2020/day14/: CMakeLists.txt  day14.cpp
2020/day15/: CMakeLists.txt  day15.cpp
2020/day16/: CMakeLists.txt  day16.cpp
2020/day17/: CMakeLists.txt  day17.cpp
2020/day18/: CMakeLists.txt  day18.cpp
2020/day19/: CMakeLists.txt  day19.cpp
2020/day20/: CMakeLists.txt  day20.cpp
2020/day21/: CMakeLists.txt  day21.cpp
2020/day22/: CMakeLists.txt  day22.cpp
2020/day23/: CMakeLists.txt  day23.cpp
2020/day24/: CMakeLists.txt  day24.cpp
2020/day25/: CMakeLists.txt  day25.cpp
2021/day01/: CMakeLists.txt  day01.cpp  day01.h  main.cpp  test.cpp
2021/day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp  test.cpp
2021/day03/: day03.cpp  day03.h  main.cpp  test.cpp
2021/day04/: day04.cpp  day04.h  main.cpp  test.cpp
2021/day05/: day05.cpp  day05.h  main.cpp  test.cpp
2021/day06/: day06.cpp  day06.h  main.cpp  test.cpp
2021/day07/: CMakeLists.txt  day07.cpp  day07.h  main.cpp  test.cpp
2021/day08/: day08.cpp  day08.h  main.cpp  test.cpp
2021/day09/: day09.cpp  day09.h  main.cpp  test.cpp
2021/day10/: CMakeLists.txt  day10.cpp  day10.h  main.cpp  test.cpp
2021/day11/: day11.cpp  day11.h  main.cpp  test.cpp
2021/day12/: CMakeLists.txt  day12.cpp  day12.h  main.cpp  test.cpp
2021/day13/: CMakeLists.txt  day13.cpp  day13.h  main.cpp  test.cpp
2021/day14/: CMakeLists.txt  day14.cpp  day14.h  main.cpp  test.cpp
2021/day15/: CMakeLists.txt  day15.cpp  day15.h  main.cpp  test.cpp
2021/day16/: CMakeLists.txt  day16.cpp  day16.h  main.cpp  test.cpp  test29.txt
2021/day17/: CMakeLists.txt  day17.cpp  day17.h  main.cpp  test.cpp  test2.txt
2021/day18/: CMakeLists.txt  day18.cpp  day18.h  main.cpp  test.cpp
2021/day20/: CMakeLists.txt  day20.cpp  day20.h  main.cpp  test.cpp
2021/day21/: CMakeLists.txt  day21.cpp  day21.h  main.cpp  test.cpp
2021/day22/: CMakeLists.txt  day22.cpp  day22.h  main.cpp  test.cpp
2021/day24/: CMakeLists.txt  day24.cpp  day24.h  main.cpp  test.cpp
2021/day25/: CMakeLists.txt  day25.cpp  day25.h  main.cpp  test.cpp
2022/day01/: day01.cpp  day01.h  main.cpp  test.cpp
2022/day02/: day02.cpp  day02.h  main.cpp  test.cpp
2022/day03/: day03.cpp  day03.h  main.cpp  test.cpp
2022/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp  test.cpp
2022/day05/: CMakeLists.txt  day05.cpp  day05.h  main.cpp  test.cpp
2022/day06/: CMakeLists.txt  day06.cpp  day06.h  main.cpp  test.cpp
2022/day07/: CMakeLists.txt  day07.cpp  day07.h  main.cpp  test.cpp
2022/day08/: CMakeLists.txt  day08.cpp  day08.h  main.cpp  test.cpp
2022/day09/: CMakeLists.txt  day09.cpp  day09.h  main.cpp  test.cpp
2022/day10/: day10.cpp  day10.h  main.cpp  test.cpp
2022/day11/: CMakeLists.txt  day11.cpp  day11.h  main.cpp  test.cpp
2022/day12/: day12.cpp  day12.h  main.cpp  test.cpp
2022/day13/: day13.cpp  day13.h  main.cpp  test.cpp
2022/day14/: day14.cpp  day14.h  main.cpp  test.cpp
2022/day15/: day15.cpp  day15.h  main.cpp  test.cpp
2022/day16/: day16.cpp  day16.h  main.cpp  test.cpp
2022/day17/: day17.cpp  day17.h  main.cpp  test.cpp
2022/day18/: day18.cpp  day18.h  main.cpp  test.cpp
2022/day19/: day19.cpp  day19.h  main.cpp  test.cpp
2022/day20/: CMakeLists.txt  day20.cpp  day20.h  main.cpp  test.cpp
2022/day21/: day21.cpp  day21.h  main.cpp  test.cpp
2022/day22/: day22.cpp  day22.h  main.cpp  (+1 more)
2023/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp  test.cpp
2023/day12/: CMakeLists.txt  day12.cpp  day12.h  main.cpp  test.cpp
2023/day13/: CMakeLists.txt  day13.cpp  day13.h  main.cpp  test.cpp
2024/day03/: CMakeLists.txt  day03.cpp  day03.h  main.cpp  test.cpp
2024/day10/: CMakeLists.txt  day10.cpp  day10.h  main.cpp  test.cpp
2024/day15/: CMakeLists.txt  day15.cpp  day15.h  main.cpp  test.cpp
2024/day19/: CMakeLists.txt  day19.cpp  day19.h  main.cpp  test.cpp
2024/day23/: CMakeLists.txt  day23.cpp  day23.h  main.cpp  test.cpp
2025/01/: 01.cpp  01.h  CMakeLists.txt  main.cpp  test.cpp
common/: CMakeLists.txt  common.cpp  common.h  main_catch.cpp  test_common.cpp
day01/: CMakeLists.txt  day01.cpp
day02/: CMakeLists.txt  day02.cpp
day03/: CMakeLists.txt
day04/: CMakeLists.txt  day04.cpp
day05/: CMakeLists.txt  day05.cpp
day06/: day06.cpp
day07/: day07.cpp
day08/: day08.cpp
day09/: CMakeLists.txt  day09.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt
day14/: CMakeLists.txt
day15/: CMakeLists.txt  day15.cpp
day16/: day16.cpp
day17/: CMakeLists.txt  day17.cpp
day19/: CMakeLists.txt  day19.cpp
day20/: CMakeLists.txt  day20.cpp
day21/: CMakeLists.txt  day21.cpp
day22/: CMakeLists.txt  day22.cpp
day23/: CMakeLists.txt  day23.cpp
day24/: CMakeLists.txt  day24.cpp
day25/: CMakeLists.txt
scripts/: init.py
template/: CMakeLists.txt  dayXX.cpp  dayXX.h  main.cpp  test.cpp
(+202 files in other folders)
